--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
-before_install: sudo apt-get install racket
+before_install: 
+    - sudo add-apt-repository -y ppa:plt/racket
+    - sudo apt-get update
+    - sudo apt-get install -y racket
 git_depth: 1
 script: racket test-all.rkt
